# Project

./: CMakeLists.txt  InvertedIndex_test.cpp  README.md  config.json  main.cpp  requests.json
src/: CMakeLists.txt  invertedindex.cpp
test/: CMakeLists.txt  ConverterJSON_test.cpp  invertedindextests.cpp  searchservertests.cpp
tests/: CMakeLists.txt
